--- a/login/css/style.css
+++ b/login/css/style.css
@@ -181,7 +181,7 @@
     border: 3px solid rgba(0, 0, 0, 0.1);
     font-weight: 900;
     font-size: 18px;
-    color: rgba(0, 0, 0, 0.2);
+    color: #ED2553;
 }
 
 .button.login {
@@ -200,6 +200,7 @@
 
 .button.login button.active {
     border: 3px solid transparent;
+    background-color: #ED2553;
     color: #fff !important;
 }
 
@@ -403,4 +404,22 @@ html {
     text-decoration: none;
     list-style-type: none;
     outline: none;
+}
+
+.intro {
+    padding: 190px;
+}
+
+.intro h1 {
+    font-size: 96px;
+    font-family: 'Roboto', sans-serif;
+    color: #212121;
+    font-weight: 600;
+}
+
+.intro h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #263238;
+    font-weight: 400;
 }
