Abhijit changed to active

--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -1,16 +1,11 @@
 .uk-navbar-container {
-	background-color: pink !important;
+    background-color: transparent;
 }
 
 body {
-	background-image: url(../img/train_bg.png);
+    background-image: url(../img/train_bg.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
-    -moz-transform: scale(0.7, 0.7);
-    /* Moz-browsers */
-    zoom: 0.7;
-    /* Other non-webkit browsers */
-    zoom: 70%;
 }
