--- a/homepage/css/style.css
+++ b/homepage/css/style.css
@@ -15,6 +15,10 @@ body {
     margin-top: 120px;
 }
 
+.uk-card2 {
+    margin-top: 10px !important;
+}
+
 div.seatCharts-cell {
     color: #182C4E;
     height: 25px;
